# dispatch

./: README.md  package.json
.github/workflows/: release.yml
docs/: releasing.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  menu.rs
src-tauri/src/commands/: agent.rs  ai.rs  attachments.rs  board.rs  detect.rs  gh.rs  git.rs  mod.rs  replace.rs  repository.rs  setup.rs  terminal.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src/app/: App.tsx  app.tsx  commands.ts  keyboard.ts  menu-events.ts
src/components/: BranchMenu.tsx  CommitComposer.tsx  GitMenu.tsx  PrBranchChoiceDialog.tsx  PrFlowDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  branch-menu.tsx  command-palette.tsx  diff-pane.tsx  file-row.tsx  git-menu.tsx  icons.tsx  onboarding-modal.tsx  overlay.tsx  pr-branch-choice-dialog.tsx  pr-flow-dialog.tsx  resize-handle.tsx  settings-dialog.tsx  sidebar.tsx  stash-prompt-dialog.tsx  terminal-drawer.tsx  top-bar.tsx
src/components/board/: action-icon.tsx  board-column.tsx  board-view.tsx  card-detail-modal.tsx  card-tile.tsx  chip-popover.tsx  new-card-dialog.tsx  project-scripts-dialog.tsx  project-setup-dialog.tsx  project-sidebar.tsx
src/features/board/: board.api.ts  board.store.ts  board.types.ts  transitions.ts
src/features/git/: git.api.ts
src/features/repository/: repository.store.ts
src/features/terminal/: terminal.api.ts
src/lib/: notify.ts  paths.ts
