[package]
name = "squint"
version = "0.2.3"
description = "Squint — a focused macOS app for reviewing AI-generated Git changes."
authors = ["Lucas Aguiar"]
edition = "2021"

[lib]
name = "squint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
portable-pty = "0.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
